--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-router-dom": "^6.30.3"
   },
   "devDependencies": {
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.3.3",
+    "typescript": "^5.9.3",
     "vite": "^5.4.10"
   }
 }
